games/veloren-weekly/files/patch-i386
error[E0308]: mismatched types
   --> rtsim/src/gen/mod.rs:30:43
    |
30  |         let mut rng = SmallRng::from_seed(seed);
    |                       ------------------- ^^^^ expected an array with a fixed size of 16 elements, found one with 32 elements
    |                       |
    |                       arguments to this function are incorrect
    |
note: associated function defined here
   --> cargo-crates/rand_core-0.6.4/src/lib.rs:319:8
    |
319 |     fn from_seed(seed: Self::Seed) -> Self;
    |        ^^^^^^^^^

--- rtsim/src/gen/mod.rs.orig	2023-07-03 10:21:20 UTC
+++ rtsim/src/gen/mod.rs
@@ -23,6 +23,9 @@ impl Data {
 
 impl Data {
     pub fn generate(settings: &WorldSettings, world: &World, index: IndexRef) -> Self {
+#[cfg(target_pointer_width = "32")]
+        let mut seed = [0; 16];
+#[cfg(not(target_pointer_width = "32"))]
         let mut seed = [0; 32];
         seed.iter_mut()
             .zip(&mut index.seed.to_le_bytes())
